<resources>
    <string name="app_name">contact_tracing_two</string>
    <string name="edt_usr">Enter Username</string>
    <string name="edt_pass">Enter Password</string>
    <string name="log_imgLogo">log_imgLogo</string>
    <string name="log_txtV_title">GPS CONTACT TRACING APP</string>
    <string name="log_txtV_usr">Username:</string>
    <string name="log_txtV_usrpsw">Password:</string>
    <string name="log_txtV_forgotpass">Forgot password?</string>
    <string name="log_logBtn">login</string>
    <string name="log_registerBtn">Sign Up</string>
    <string name="reg_txtV_title">GPS CONTACT TRACING APP</string>
    <string name="reg_txtV_regTitle">Registration</string>
    <string name="reg_txtV_Fname">First Name</string>
    <string name="reg_edt_Fname">Enter First Name</string>
    <string name="reg_txtV_Mname">Middle Name (Optional)</string>
    <string name="reg_edt_Mname">Enter Middle Name</string>
    <string name="reg_txtV_Lname">Last Name</string>
    <string name="reg_edt_Lname">Enter Last Name</string>
    <string name="reg_txtV_Bdate">Birth Date</string>
    <string name="reg_edt_Bdate">Enter Birth Date</string>
    <string name="reg_txtV_Gender">Gender</string>
    <string name="reg_Btn_SignUp">Sign Up</string>
    <string name="reg_txtV_Region">Region</string>
    <string name="reg_txtV_Province">Province</string>
    <string name="reg_txtV_Municipality">Municipality</string>
    <string name="reg_txtV_Brgy">Barangay</string>
    <string name="reg_txtV_Email">Email Address</string>
    <string name="reg_edt_email">Enter Email Address</string>
    <string name="fpass_imgV_logo">imgV_logo</string>
    <string name="txtv_fpass_directions">Enter your <font color='#FF0000'>USERNAME</font> and <font color='#FF0000'>CONTACT NUMBER </font> for us to verify it is you</string>
    <string name="username">Username</string>
    <string name="enter_username">Enter Username</string>
    <string name="contact_number">Contact Number</string>
    <string name="enter_contact_number">Enter Contact Number</string>
    <string name="fpass_btn_Submit">Continue</string>
    <string name="enter_your_one_time_pin">Verification Code</string>
    <string name="_09xxxxx">09xxxxx</string>
    <string name="please_enter_the_verification_code_we_sent">Please Enter the Verification code we sent</string>
    <string name="submit">Submit</string>
    <string name="didn_t_get_otp_resend">Didn\'t get OTP? <b>Resend</b></string>
    <string name="button">Button</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="todo">TODO</string>
    <string name="remember_your_password_this_time">Remember Your Password this Time</string>
    <string name="reset_password">Change password</string>
    <string name="the_password_should_have_atleast_8_characters">The Password should have atleast 8 characters</string>
    <string name="new_password">New password</string>
    <string name="cpass_txtInlay_passOne">New Password</string>
    <string name="cpass_txtInlay_passTwo">Confirm Password</string>

    <string name="cpass_txtV_passTwo">Confirm password</string>
    <string name="cpass_btnSubmit">Change password</string>
    <string name="usernamess">Username</string>
    <string name="sadwasdadaaa">Password</string>
    <string name="sssss">Enter Password</string>
    <string name="reg_txtV_ContactNum">Contact Number</string>
    <string name="reg_edt_ContactNum">Enter Contact Number</string>
</resources>