<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ecf0f3"
    tools:context=".changePassword">


    <LinearLayout
        android:id="@+id/cpass_layOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UselessParent">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/todo"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/cpass_logo" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="sans-serif"
            android:text="@string/remember_your_password_this_time"
            android:textColor="#353935"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/cpass_layOne"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/reset_password"
            android:textSize="24sp"
            android:textColor="#353935"
            android:textStyle="bold"
            android:fontFamily="sans-serif"
            android:layout_marginTop="10dp"
             />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/the_password_should_have_atleast_8_characters" />



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cpass_txtInlay_passOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            android:layout_marginTop="50dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/no_background"
                android:hint="@string/cpass_txtInlay_passOne"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cpass_txtInlay_passTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:errorEnabled="true"
            android:layout_marginTop="30dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpass_txtInlay_passTwo"
                android:background="@drawable/no_background"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/cpass_btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:fontFamily="sans-serif"
                android:background="@drawable/button_corner"
                android:text="@string/cpass_btnSubmit" />



    </LinearLayout>

</RelativeLayout>