<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cons_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ecf0f3"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/log_imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/log_imgLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_two" />

    <TextView
        android:id="@+id/log_txtV_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/log_txtV_title"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_imgLogo" />

    <TextView
        android:id="@+id/log_txtV_usr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/log_txtV_usr"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_txtV_title" />

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/neumorphCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#efefef"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_txtV_usr"
        app:neumorph_shadowColorDark="#d9d9d9"
        app:neumorph_shadowColorLight="#fff"
        app:neumorph_shadowElevation="5dp"
        app:neumorph_shapeType="pressed">


        <EditText
            android:id="@+id/edt_usr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/no_background"
            android:hint="@string/edt_usr"
            android:importantForAutofill="no"
            android:textColorHint="#808080"
            android:inputType="textPersonName" />
    </soup.neumorphism.NeumorphCardView>

    <TextView

        android:id="@+id/log_txtV_usrpsw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/log_txtV_usrpsw"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neumorphCardView" />

    <soup.neumorphism.NeumorphCardView
        android:id="@+id/neumorphCardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#efefef"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_txtV_usrpsw"
        app:neumorph_shadowColorDark="#d9d9d9"
        app:neumorph_shadowColorLight="#fff"
        app:neumorph_shadowElevation="5dp"
        app:neumorph_shapeType="pressed">


        <EditText

            android:id="@+id/edt_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/no_background"
            android:hint="@string/edt_pass"
            android:importantForAutofill="no"
            android:textColorHint="#808080"
            android:inputType="textPassword" />

    </soup.neumorphism.NeumorphCardView>


    <TextView
        android:id="@+id/log_txtV_forgotpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:fontFamily="sans-serif"
        android:padding="2dp"
        android:text="@string/log_txtV_forgotpass"
        android:textColor="#2200cc"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/log_logBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neumorphCardView2"
        app:layout_constraintVertical_bias="0.621" />

    <Button
        android:id="@+id/log_logBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_corner"
        android:padding="10dp"
        android:text="@string/log_logBtn"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neumorphCardView2"
        app:layout_constraintVertical_bias="0.608" />

    <TextView
        android:id="@+id/log_registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif"
        android:text="@string/log_registerBtn"
        android:textColor="#2200cc"
        android:textSize="14sp"
        android:padding="2dp"
        app:layout_constraintBottom_toTopOf="@+id/log_logBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/neumorphCardView2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>